thirdparty/include/libs/raylib55/include/raylib.h

    typedef enum bool { false = 0, true = !false } bool;
typedef struct RLVector2 {
    float x;                
    float y;                
} RLVector2;
typedef struct RLVector3 {
    float x;                
    float y;                
    float z;                
} RLVector3;
typedef struct RLMatrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} RLMatrix;
typedef struct RLColor {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} RLColor;
typedef struct RLRectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} RLRectangle;
typedef struct RLImage {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLImage;
typedef struct RLTexture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} RLTexture;
typedef RLTexture RLTexture2D;
typedef struct RLCamera3D {
    RLVector3 position;       
    RLVector3 target;         
    RLVector3 up;             
    float fovy;             
    int projection;         
} RLCamera3D;
typedef RLCamera3D RLCamera;    
typedef struct RLMesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    RLMatrix *boneMatrices;   
    int boneCount;          
    unsigned int vaoId;     
    unsigned int *vboId;    
} RLMesh;
typedef struct RLShader {
    unsigned int id;        
    int *locs;              
} RLShader;
typedef struct RLMaterialMap {
    RLTexture2D texture;      
    RLColor color;            
    float value;            
} RLMaterialMap;
typedef struct RLMaterial {
    RLShader shader;          
    RLMaterialMap *maps;      
    float params[4];        
} RLMaterial;
typedef struct RLTransform {
    RLVector3 translation;    
    RLQuaternion rotation;    
    RLVector3 scale;          
} RLTransform;
typedef struct RLBoneInfo {
    char name[32];          
    int parent;             
} RLBoneInfo;
typedef struct RLModel {
    RLMatrix transform;       
    int meshCount;          
    int materialCount;      
    RLMesh *meshes;           
    RLMaterial *materials;    
    int *meshMaterial;      
    int boneCount;          
    RLBoneInfo *bones;        
    RLTransform *bindPose;    
} RLModel;
typedef struct RLRay {
    RLVector3 position;       
    RLVector3 direction;      
} RLRay;
typedef struct RLBoundingBox {
    RLVector3 min;            
    RLVector3 max;            
} RLBoundingBox;
RLAPI int TextCopy(char *dst, const char *src);                                             
RLAPI bool TextIsEqual(const char *text1, const char *text2);                               
RLAPI unsigned int TextLength(const char *text);                                            
RLAPI const char *TextFormat(const char *text, ...);                                        
RLAPI const char *TextSubtext(const char *text, int position, int length);                  
RLAPI char *TextReplace(const char *text, const char *replace, const char *by);             
RLAPI char *TextInsert(const char *text, const char *insert, int position);                 
RLAPI const char *TextJoin(const char **textList, int count, const char *delimiter);        
RLAPI const char **TextSplit(const char *text, char delimiter, int *count);                 
RLAPI void TextAppend(char *text, const char *append, int *position);                       
RLAPI int TextFindIndex(const char *text, const char *find);                                
RLAPI const char *TextToUpper(const char *text);                      
RLAPI const char *TextToLower(const char *text);                      
RLAPI const char *TextToPascal(const char *text);                     
RLAPI const char *TextToSnake(const char *text);                      
RLAPI const char *TextToCamel(const char *text);                      
RLAPI int TextToInteger(const char *text);                            
RLAPI float TextToFloat(const char *text);                            
RLAPI void DrawLine3D(RLVector3 startPos, RLVector3 endPos, RLColor color);                                    
RLAPI void DrawPoint3D(RLVector3 position, RLColor color);                                                   
RLAPI void DrawCircle3D(RLVector3 center, float radius, RLVector3 rotationAxis, float rotationAngle, RLColor color); 
RLAPI void DrawTriangle3D(RLVector3 v1, RLVector3 v2, RLVector3 v3, RLColor color);                              
RLAPI void DrawTriangleStrip3D(const RLVector3 *points, int pointCount, RLColor color);                      
RLAPI void DrawCube(RLVector3 position, float width, float height, float length, RLColor color);             
RLAPI void DrawCubeV(RLVector3 position, RLVector3 size, RLColor color);                                       
RLAPI void DrawCubeWires(RLVector3 position, float width, float height, float length, RLColor color);        
RLAPI void DrawCubeWiresV(RLVector3 position, RLVector3 size, RLColor color);                                  
RLAPI void DrawSphere(RLVector3 centerPos, float radius, RLColor color);                                     
RLAPI void DrawSphereEx(RLVector3 centerPos, float radius, int rings, int slices, RLColor color);            
RLAPI void DrawSphereWires(RLVector3 centerPos, float radius, int rings, int slices, RLColor color);         
RLAPI void DrawCylinder(RLVector3 position, float radiusTop, float radiusBottom, float height, int slices, RLColor color); 
RLAPI void DrawCylinderEx(RLVector3 startPos, RLVector3 endPos, float startRadius, float endRadius, int sides, RLColor color); 
RLAPI void DrawCylinderWires(RLVector3 position, float radiusTop, float radiusBottom, float height, int slices, RLColor color); 
RLAPI void DrawCylinderWiresEx(RLVector3 startPos, RLVector3 endPos, float startRadius, float endRadius, int sides, RLColor color); 
RLAPI void DrawCapsule(RLVector3 startPos, RLVector3 endPos, float radius, int slices, int rings, RLColor color); 
RLAPI void DrawCapsuleWires(RLVector3 startPos, RLVector3 endPos, float radius, int slices, int rings, RLColor color); 
RLAPI void DrawPlane(RLVector3 centerPos, RLVector2 size, RLColor color);                                      
RLAPI void DrawRay(RLRay ray, RLColor color);                                                                
RLAPI void DrawGrid(int slices, float spacing);                                                          
RLAPI RLModel LoadModel(const char *fileName);                                                
RLAPI RLModel LoadModelFromMesh(RLMesh mesh);                                                   
RLAPI bool IsModelValid(RLModel model);                                                       
RLAPI void UnloadModel(RLModel model);                                                        
RLAPI RLBoundingBox GetModelBoundingBox(RLModel model);                                         
RLAPI void DrawModel(RLModel model, RLVector3 position, float scale, RLColor tint);               
RLAPI void DrawModelEx(RLModel model, RLVector3 position, RLVector3 rotationAxis, float rotationAngle, RLVector3 scale, RLColor tint); 
RLAPI void DrawModelWires(RLModel model, RLVector3 position, float scale, RLColor tint);          
RLAPI void DrawModelWiresEx(RLModel model, RLVector3 position, RLVector3 rotationAxis, float rotationAngle, RLVector3 scale, RLColor tint); 
RLAPI void DrawModelPoints(RLModel model, RLVector3 position, float scale, RLColor tint); 
RLAPI void DrawModelPointsEx(RLModel model, RLVector3 position, RLVector3 rotationAxis, float rotationAngle, RLVector3 scale, RLColor tint); 
RLAPI void DrawBoundingBox(RLBoundingBox box, RLColor color);                                   
RLAPI void DrawBillboard(RLCamera camera, RLTexture2D texture, RLVector3 position, float scale, RLColor tint);   
RLAPI void DrawBillboardRec(RLCamera camera, RLTexture2D texture, RLRectangle source, RLVector3 position, RLVector2 size, RLColor tint); 
RLAPI void DrawBillboardPro(RLCamera camera, RLTexture2D texture, RLRectangle source, RLVector3 position, RLVector3 up, RLVector2 size, RLVector2 origin, float rotation, RLColor tint); 
RLAPI void UploadMesh(RLMesh *mesh, bool dynamic);                                            
RLAPI void UpdateMeshBuffer(RLMesh mesh, int index, const void *data, int dataSize, int offset); 
RLAPI void UnloadMesh(RLMesh mesh);                                                           
RLAPI void DrawMesh(RLMesh mesh, RLMaterial material, RLMatrix transform);                        
RLAPI void DrawMeshInstanced(RLMesh mesh, RLMaterial material, const RLMatrix *transforms, int instances); 
RLAPI RLBoundingBox GetMeshBoundingBox(RLMesh mesh);                                            
RLAPI void GenMeshTangents(RLMesh *mesh);                                                     
RLAPI bool ExportMesh(RLMesh mesh, const char *fileName);                                     
RLAPI bool ExportMeshAsCode(RLMesh mesh, const char *fileName);                               
RLAPI RLMesh GenMeshPoly(int sides, float radius);                                            
RLAPI RLMesh GenMeshPlane(float width, float length, int resX, int resZ);                     
RLAPI RLMesh GenMeshCube(float width, float height, float length);                            
RLAPI RLMesh GenMeshSphere(float radius, int rings, int slices);                              
RLAPI RLMesh GenMeshHemiSphere(float radius, int rings, int slices);                          
RLAPI RLMesh GenMeshCylinder(float radius, float height, int slices);                         
RLAPI RLMesh GenMeshCone(float radius, float height, int slices);                             
RLAPI RLMesh GenMeshTorus(float radius, float size, int radSeg, int sides);                   
RLAPI RLMesh GenMeshKnot(float radius, float size, int radSeg, int sides);                    
RLAPI RLMesh GenMeshHeightmap(RLImage heightmap, RLVector3 size);                                 
RLAPI RLMesh GenMeshCubicmap(RLImage cubicmap, RLVector3 cubeSize);                               