engine/thirdparty/raylib55.c3i


// Text strings management functions (no UTF-8 strings, only byte chars)
// NOTE: Some strings allocate memory internally for returned strings, just be careful!
// Copy one string to another, returns bytes copied
fn CInt textCopy(char* dst, char* src) @cname("TextCopy");
// Check if two text string are equal
fn bool textIsEqual(ZString text1, ZString text2) @cname("TextIsEqual");
// Get text length, checks for '\0' ending
fn CUInt textLength(ZString text) @cname("TextLength");
// Text formatting with variables (sprintf() style)
fn ZString textFormat(ZString text, ...) @cname("TextFormat");
// Get a piece of a text string
fn ZString textSubtext(ZString text, CInt position, CInt length) @cname("TextSubtext");
// Replace text string (WARNING: memory must be freed!)
fn ZString textReplace(ZString text, ZString replace, ZString by) @cname("TextReplace");
// Insert text in a position (WARNING: memory must be freed!)
fn ZString textInsert(ZString text, ZString insert, CInt position) @cname("TextInsert");
// Join text strings with delimiter
fn ZString textJoin(ZString* textList, CInt count, ZString delimiter) @cname("TextJoin");
// Split text into multiple strings
fn ZString* textSplit(ZString text, char delimiter, CInt *count) @cname("TextSplit");
// Append text at specific position and move cursor!
fn void textAppend(ZString text, ZString append, CInt* position) @cname("TextAppend");
// Find first text occurrence within a string
fn CInt textFindIndex(ZString text, ZString find) @cname("TextFindIndex");
// Get upper case version of provided string
fn ZString textToUpper(ZString text) @cname("TextToUpper");
// Get lower case version of provided string
fn ZString textToLower(ZString text) @cname("TextToLower");
// Get Pascal case notation version of provided string
fn ZString textToPascal(ZString text) @cname("TextToPascal");
// Get Snake case notation version of provided string
fn ZString textToSnake(ZString text) @cname("TextToSnake");
// Get Camel case notation version of provided string
fn ZString textToCamel(ZString text) @cname("TextToCamel");
// Get integer value from text (negative values not supported)
fn CInt textToInteger(ZString text) @cname("TextToInteger");
// Get float value from text (negative values not supported)
fn float textToFloat(ZString text) @cname("TextToFloat");
//------------------------------------------------------------------------------------
// Basic 3d Shapes Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

// Basic geometric 3D shapes drawing functions
// Draw a line in 3D world space
fn void drawLine3D(RLVector3 startPos, RLVector3 endPos, RLColor color) @cname("DrawLine3D");
// Draw a point in 3D space, actually a small line
fn void drawPoint3D(RLVector3 position, RLColor color) @cname("DrawPoint3D");
// Draw a circle in 3D world space
fn void drawCircle3D(RLVector3 center, float radius, RLVector3 rotationAxis, float rotationAngle, RLColor color) @cname("DrawCircle3D");
// Draw a color-filled triangle (vertex in counter-clockwise order!)
fn void drawTriangle3D(RLVector3 v1, RLVector3 v2, RLVector3 v3, RLColor color) @cname("DrawTriangle3D");
// Draw a triangle strip defined by points
fn void drawTriangleStrip3D(RLVector3 *points, CInt pointCount, RLColor color) @cname("DrawTriangleStrip3D");
// Draw cube
fn void drawCube(RLVector3 position, float width, float height, float length, RLColor color) @cname("DrawCube");
// Draw cube (Vector version)
fn void drawCubeV(RLVector3 position, RLVector3 size, RLColor color) @cname("DrawCubeV");
// Draw cube wires
fn void drawCubeWires(RLVector3 position, float width, float height, float length, RLColor color) @cname("DrawCubeWires");
// Draw cube wires (Vector version)
fn void drawCubeWiresV(RLVector3 position, RLVector3 size, RLColor color) @cname("DrawCubeWiresV");
// Draw sphere
fn void drawSphere(RLVector3 centerPos, float radius, RLColor color) @cname("DrawSphere");
// Draw sphere with extended parameters
fn void drawSphereEx(RLVector3 centerPos, float radius, CInt rings, CInt slices, RLColor color) @cname("DrawSphereEx");
// Draw sphere wires
fn void drawSphereWires(RLVector3 centerPos, float radius, CInt rings, CInt slices, RLColor color) @cname("DrawSphereWires");
// Draw a cylinder/cone
fn void drawCylinder(RLVector3 position, float radiusTop, float radiusBottom, float height, CInt slices, RLColor color) @cname("DrawCylinder");
// Draw a cylinder with base at startPos and top at endPos
fn void drawCylinderEx(RLVector3 startPos, RLVector3 endPos, float startRadius, float endRadius, CInt sides, RLColor color) @cname("DrawCylinderEx");
// Draw a cylinder/cone wires
fn void drawCylinderWires(RLVector3 position, float radiusTop, float radiusBottom, float height, CInt slices, RLColor color) @cname("DrawCylinderWires");
// Draw a cylinder wires with base at startPos and top at endPos
fn void drawCylinderWiresEx(RLVector3 startPos, RLVector3 endPos, float startRadius, float endRadius, CInt sides, RLColor color) @cname("DrawCylinderWiresEx");
// Draw a capsule with the center of its sphere caps at startPos and endPos
fn void drawCapsule(RLVector3 startPos, RLVector3 endPos, float radius, CInt slices, CInt rings, RLColor color) @cname("DrawCapsule");
//Draw capsule wireframe with the center of its sphere caps at startPos and endPos
fn void drawCapsuleWires(RLVector3 startPos, RLVector3 endPos, float radius, CInt slices, CInt rings, RLColor color) @cname("DrawCapsuleWires");
// Draw a plane XZ
fn void drawPlane(RLVector3 centerPos, RLVector2 size, RLColor color) @cname("DrawPlane");
// Draw a ray line
fn void drawRay(RLRay ray, RLColor color) @cname("DrawRay");
// Draw a grid (centered at (0, 0, 0))
fn void drawGrid(CInt slices, float spacing) @cname("DrawGrid");

//------------------------------------------------------------------------------------
// RLModel 3d Loading and Drawing Functions (Module: models)
//------------------------------------------------------------------------------------

// RLModel management functions
// Load model from files (meshes and materials)
fn RLModel loadModel(ZString fileName) @cname("LoadModel");
// Load model from generated mesh (default material)
fn RLModel loadModelFromMesh(RLMesh mesh) @cname("LoadModelFromMesh");
// Check if a model is ready
fn bool isModelValid(RLModel model) @cname("IsModelValid");
// Unload model (including meshes) from memory (RAM and/or VRAM)
fn void unloadModel(RLModel model) @cname("UnloadModel");
// Compute model bounding box limits (considers all meshes)
fn RLBoundingBox getModelBoundingBox(RLModel model) @cname("GetModelBoundingBox");

// RLModel drawing functions
// Draw a model (with texture if set)
fn void drawModel(RLModel model, RLVector3 position, float scale, RLColor tint) @cname("DrawModel");
// Draw a model with extended parameters
fn void drawModelEx(RLModel model, RLVector3 position, RLVector3 rotationAxis, float rotationAngle, RLVector3 scale, RLColor tint) @cname("DrawModelEx");
// Draw a model wires (with texture if set)
fn void drawModelWires(RLModel model, RLVector3 position, float scale, RLColor tint) @cname("DrawModelWires");
// Draw a model wires (with texture if set) with extended parameters
fn void drawModelWiresEx(RLModel model, RLVector3 position, RLVector3 rotationAxis, float rotationAngle, RLVector3 scale, RLColor tint) @cname("DrawModelWiresEx");
// Draw a model as points
fn void drawModelPoints(RLModel model, RLVector3 position, float scale, RLColor tint) @cname("DrawModelPoints");
// Draw a model as points with extended parameters
fn void drawModelPointsEx(RLModel model, RLVector3 position, RLVector3 rotationAxis, float rotationAngle, RLVector3 scale, RLColor tint) @cname("DrawModelPointsEx");
// Draw bounding box (wires)
fn void drawBoundingBox(RLBoundingBox box, RLColor color) @cname("DrawBoundingBox");
// Draw a billboard texture
fn void drawBillboard(RLCamera camera, RLTexture2D texture, RLVector3 position, float scale, RLColor tint) @cname("DrawBillboard");
// Draw a billboard texture defined by source
fn void drawBillboardRec(RLCamera camera, RLTexture2D texture, RLRectangle source, RLVector3 position, RLVector2 size, RLColor tint) @cname("DrawBillboardRec");
// Draw a billboard texture defined by source and rotation
fn void drawBillboardPro(RLCamera camera, RLTexture2D texture, RLRectangle source, RLVector3 position, RLVector3 up, RLVector2 size, RLVector2 origin, float rotation, RLColor tint) @cname("DrawBillboardPro");

// RLMesh management functions
// Upload mesh vertex data in GPU and provide VAO/VBO ids
fn void uploadMesh(RLMesh* mesh, bool dynamic) @cname("UploadMesh");
// Update mesh vertex data in GPU for a specific buffer index
fn void updateMeshBuffer(RLMesh mesh, CInt index, void* data, CInt dataSize, CInt offset) @cname("UpdateMeshBuffer");
// Unload mesh data from CPU and GPU
fn void unloadMesh(RLMesh mesh) @cname("UnloadMesh");
// Draw a 3d mesh with material and transform
fn void drawMesh(RLMesh mesh, RLMaterial material, RLMatrix transform) @cname("DrawMesh");
// Draw multiple mesh instances with material and different transforms
fn void drawMeshInstanced(RLMesh mesh, RLMaterial material, RLMatrix* transforms, CInt instances) @cname("DrawMeshInstanced");
// Compute mesh bounding box limits
fn RLBoundingBox getMeshBoundingBox(RLMesh mesh) @cname("GetMeshBoundingBox");
// Compute mesh tangents
fn void genMeshTangents(RLMesh* mesh) @cname("GenMeshTangents");
// Export mesh data to file, returns true on success
fn bool exportMesh(RLMesh mesh, ZString fileName) @cname("ExportMesh");
// Export mesh as code file (.h) defining multiple arrays of vertex attributes
fn bool exportMeshAsCode(RLMesh mesh, ZString fileName) @cname("ExportMeshAsCode");

// RLMesh generation functions
// Generate polygonal mesh
fn RLMesh genMeshPoly(CInt sides, float radius) @cname("GenMeshPoly");
// Generate plane mesh (with subdivisions)
fn RLMesh genMeshPlane(float width, float length, CInt resX, CInt resZ) @cname("GenMeshPlane");
// Generate cuboid mesh
fn RLMesh genMeshCube(float width, float height, float length) @cname("GenMeshCube");
// Generate sphere mesh (standard sphere)
fn RLMesh genMeshSphere(float radius, CInt rings, CInt slices) @cname("GenMeshSphere");
// Generate half-sphere mesh (no bottom cap)
fn RLMesh genMeshHemiSphere(float radius, CInt rings, CInt slices) @cname("GenMeshHemiSphere");
// Generate cylinder mesh
fn RLMesh genMeshCylinder(float radius, float height, CInt slices) @cname("GenMeshCylinder");
// Generate cone/pyramid mesh
fn RLMesh genMeshCone(float radius, float height, CInt slices) @cname("GenMeshCone");
// Generate torus mesh
fn RLMesh genMeshTorus(float radius, float size, CInt radSeg, CInt sides) @cname("GenMeshTorus");
// Generate trefoil knot mesh
fn RLMesh genMeshKnot(float radius, float size, CInt radSeg, CInt sides) @cname("GenMeshKnot");
// Generate heightmap mesh from image data
fn RLMesh genMeshHeightmap(RLImage heightmap, RLVector3 size) @cname("GenMeshHeightmap");
// Generate cubes-based map mesh from image data
fn RLMesh genMeshCubicmap(RLImage cubicmap, RLVector3 cubeSize) @cname("GenMeshCubicmap");
